[gd_scene load_steps=21 format=3 uid="uid://bj0ipt8tdkuis"]

[ext_resource type="Theme" uid="uid://m0x2wyaqtttr" path="res://assets/theme/medium_font.tres" id="1_ymdlq"]
[ext_resource type="Texture2D" uid="uid://s5al7hprjcvh" path="res://assets/graphics/arrowback2x.png" id="2_2vba7"]
[ext_resource type="Script" path="res://src/tarefa.gd" id="2_j05rh"]
[ext_resource type="Theme" uid="uid://c5pch03hgt8xk" path="res://assets/theme/top_bar.tres" id="3_a62pb"]
[ext_resource type="PackedScene" uid="uid://b14p7pi4xlfv" path="res://scenes/nav_bar.tscn" id="5_bfy7y"]
[ext_resource type="Texture2D" uid="uid://hi2kqlstgs0j" path="res://assets/graphics/figura_questao.png" id="5_gwks8"]
[ext_resource type="Theme" uid="uid://rrfyr87dn5r2" path="res://assets/theme/poppins_reg_14.tres" id="6_b25qa"]
[ext_resource type="Script" path="res://src/OpButton.gd" id="6_v5e7l"]
[ext_resource type="Texture2D" uid="uid://ctfg0fmaoutj0" path="res://assets/graphics/Botão principal.png" id="7_3ah3s"]
[ext_resource type="StyleBox" uid="uid://b8ujeld4mpmk6" path="res://assets/theme/option_panel_theme.tres" id="7_kt315"]
[ext_resource type="FontFile" uid="uid://djvsly4p0esiy" path="res://assets/fonts/poppins/Poppins-SemiBold.ttf" id="8_2xfqy"]
[ext_resource type="Theme" uid="uid://c308ed2hiejgb" path="res://assets/theme/poppins_bold_20.tres" id="11_fmktp"]
[ext_resource type="Texture2D" uid="uid://tvq2pnqh8fwg" path="res://assets/graphics/emoji.png" id="11_nrwpn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl3d6"]
bg_color = Color(0.509804, 0.247059, 0.52549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f31r8"]
bg_color = Color(0.941176, 0.905882, 0.905882, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_epumb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dhgsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0wab"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btcbv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqap6"]

[node name="Tarefa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ymdlq")
script = ExtResource("2_j05rh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nl3d6")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="BackMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 31
theme_override_constants/margin_bottom = 24

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/TopBar/HBoxContainer/BackMarginContainer"]
layout_mode = 2
texture_normal = ExtResource("2_2vba7")
ignore_texture_size = true
stretch_mode = 4

[node name="LabelMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.0
theme_override_constants/margin_left = -49
theme_override_constants/margin_top = 11

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TopBar/HBoxContainer/LabelMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.0
theme = ExtResource("3_a62pb")
text = "HTML"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PerguntaMContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="PerguntaContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 25

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 31
theme_override_constants/margin_right = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_gwks8")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.32549, 0.32549, 0.32549, 1)
text = "O que há de errado com este código?"
autowrap_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer"]
custom_minimum_size = Vector2(327, 115)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f31r8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 19
theme_override_constants/margin_top = 24

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer/PerguntaMContainer/PerguntaContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("6_b25qa")
theme_override_colors/default_color = Color(0.32549, 0.32549, 0.32549, 1)
text = "console.log(Uau!  Eu adoro aprender) ,"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 15

[node name="OpcoesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
mouse_filter = 2
theme_override_constants/separation = 18

[node name="PMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="Panel1Container" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer"]
custom_minimum_size = Vector2(73, 46)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_kt315")

[node name="Op1Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer/Panel1Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_epumb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dhgsq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j0wab")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_btcbv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yqap6")
script = ExtResource("6_v5e7l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 17

[node name="Op1Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("6_b25qa")
theme_override_colors/default_color = Color(0.32549, 0.32549, 0.32549, 1)
text = "console.log( ‘ Uau!  Eu adoro aprender’ ) ,"
fit_content = true

[node name="PMarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel2Container" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer2"]
custom_minimum_size = Vector2(73, 46)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_kt315")

[node name="Op2Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer2/Panel2Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_epumb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dhgsq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j0wab")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_btcbv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yqap6")
script = ExtResource("6_v5e7l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 17

[node name="Op2Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("6_b25qa")
theme_override_colors/default_color = Color(0.32549, 0.32549, 0.32549, 1)
text = "console.log(Uau!  Eu adoro aprender) ;"
fit_content = true

[node name="PMarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel3Container" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer3"]
custom_minimum_size = Vector2(73, 46)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_kt315")

[node name="Op3Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer3/Panel3Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_epumb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dhgsq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j0wab")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_btcbv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yqap6")
script = ExtResource("6_v5e7l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 17

[node name="Op3Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("6_b25qa")
theme_override_colors/default_color = Color(0.32549, 0.32549, 0.32549, 1)
text = "console.log(Uau!  Eu adoro aprender()) ,"
fit_content = true

[node name="PMarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel4Container" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer4"]
custom_minimum_size = Vector2(73, 46)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_kt315")

[node name="Op4Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer4/Panel4Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_epumb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dhgsq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j0wab")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_btcbv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yqap6")
script = ExtResource("6_v5e7l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer4"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 17

[node name="Op4Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OpcoesContainer/PMarginContainer4/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("6_b25qa")
theme_override_colors/default_color = Color(0.32549, 0.32549, 0.32549, 1)
text = "console.log( ‘ Uau!  Eu adoro aprender’ ) ;"
fit_content = true

[node name="SepMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 49)
layout_mode = 2
mouse_filter = 2

[node name="VerificarTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_3ah3s")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VerificarTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_2xfqy")
theme_override_font_sizes/font_size = 20
text = "Verificar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavBar" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_bfy7y")]
layout_mode = 2

[node name="CorrectAnswerCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CorrectAnswerCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.701961)

[node name="MarginContainer" type="MarginContainer" parent="CorrectAnswerCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="PMarginContainer" type="MarginContainer" parent="CorrectAnswerCanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 544
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer"]
custom_minimum_size = Vector2(73, 46)
layout_mode = 2
theme_override_styles/panel = ExtResource("7_kt315")

[node name="MarginContainer" type="MarginContainer" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 83
theme_override_constants/margin_top = 33
theme_override_constants/margin_right = 20

[node name="Label" type="RichTextLabel" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("11_fmktp")
theme_override_colors/default_color = Color(0.509804, 0.247059, 0.52549, 1)
text = "Muito bem!"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer/Label"]
layout_mode = 0
offset_left = 120.0
offset_right = 164.0
offset_bottom = 20.0
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer/Label/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer/Label/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("11_nrwpn")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer/Label/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer/Label/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("11_nrwpn")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 112

[node name="ContinueTextureButton" type="TextureButton" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("7_3ah3s")

[node name="Label" type="Label" parent="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer2/ContinueTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_2xfqy")
theme_override_font_sizes/font_size = 20
text = "Continuar"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/VerificarTextureButton" to="." method="_on_verificar_texture_button_pressed"]
[connection signal="pressed" from="CorrectAnswerCanvasLayer/MarginContainer/PMarginContainer/MarginContainer2/ContinueTextureButton" to="." method="_on_continue_texture_button_pressed"]
